@@ -21,6 +21,7 @@
 #define MP_ "MP::"
 #define KEY_ ":"
 #define GRAY_ "GRAY::"
+#define FFI_ "FFI::"
 typedef struct {
 	const char *name, *translation;
 } cl_symbol_initializer;
@@ -32,6 +33,7 @@ typedef struct {
 #define MP_
 #define KEY_
 #define GRAY_
+#define FFI_
 #endif
 /*
  * Conditional addition of functions and symbols. The list of symbols can
@@ -1514,26 +1516,6 @@ cl_symbols[] = {
 {KEY_ "UNSIGNED-LONG", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "UNSIGNED-LONG-LONG", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "UNSIGNED-SHORT", KEYWORD, NULL, -1, OBJNULL},
-{SYS_ "C-CHAR-BIT", SI_CONSTANT, NULL, -1, ecl_make_fixnum(CHAR_BIT)},
-{SYS_ "C-CHAR-MAX", SI_CONSTANT, NULL, -1, ecl_make_fixnum(CHAR_MAX)},
-{SYS_ "C-CHAR-MIN", SI_CONSTANT, NULL, -1, ecl_make_fixnum(CHAR_MIN)},
-{SYS_ "C-INT-MAX", SI_CONSTANT, NULL, -1, OBJNULL}, /* See main.d */
-{SYS_ "C-INT-MIN", SI_CONSTANT, NULL, -1, OBJNULL}, /* See main.d */
-{SYS_ "C-SHORT-MAX", SI_CONSTANT, NULL, -1, ecl_make_fixnum(SHRT_MAX)},
-{SYS_ "C-SHORT-MIN", SI_CONSTANT, NULL, -1, ecl_make_fixnum(SHRT_MIN)},
-{SYS_ "C-LONG-MAX", SI_CONSTANT, NULL, -1, OBJNULL}, /* See main.d */
-{SYS_ "C-LONG-MIN", SI_CONSTANT, NULL, -1, OBJNULL}, /* See main.d */
-{SYS_ "C-LONG-LONG-MAX",SI_CONSTANT,NULL,-1,OBJNULL}, /* See main.d */
-{SYS_ "C-UCHAR-MAX", SI_CONSTANT, NULL, -1, ecl_make_fixnum(UCHAR_MAX)},
-{SYS_ "C-UINT-MAX", SI_CONSTANT, NULL, -1, OBJNULL}, /* See main.d */
-{SYS_ "C-USHORT-MAX", SI_CONSTANT, NULL, -1, ecl_make_fixnum(USHRT_MAX)},
-{SYS_ "C-ULONG-MAX", SI_CONSTANT, NULL, -1, OBJNULL}, /* See main.d */
-{SYS_ "C-ULONG-LONG-MAX",SI_CONSTANT,NULL,-1,OBJNULL}, /* See main.d */
-#ifdef ecl_long_long_t
-{SYS_ "C-LONG-LONG-BIT", SI_CONSTANT, NULL, -1, ecl_make_fixnum(ECL_LONG_LONG_BITS)},
-#else
-{SYS_ "C-LONG-LONG-BIT", SI_CONSTANT, NULL, -1, OBJNULL},
-#endif
 
 #ifdef GBC_BOEHM
 {EXT_ "GC", EXT_ORDINARY, si_gc, -1, OBJNULL},
@@ -2243,6 +2225,84 @@ cl_symbols[] = {
 
 {EXT_ "INSTALL-BYTECODES-COMPILER", EXT_ORDINARY, NULL, -1, OBJNULL},
 {EXT_ "INSTALL-C-COMPILER", EXT_ORDINARY, NULL, -1, OBJNULL},
+
+{FFI_ "C-CHAR-BIT", FFI_CONSTANT, NULL, -1, ecl_make_fixnum(CHAR_BIT)},
+{FFI_ "C-CHAR-MAX", FFI_CONSTANT, NULL, -1, ecl_make_fixnum(CHAR_MAX)},
+{FFI_ "C-CHAR-MIN", FFI_CONSTANT, NULL, -1, ecl_make_fixnum(CHAR_MIN)},
+{FFI_ "C-INT-MAX", FFI_CONSTANT, NULL, -1, OBJNULL}, /* See main.d */
+{FFI_ "C-INT-MIN", FFI_CONSTANT, NULL, -1, OBJNULL}, /* See main.d */
+{FFI_ "C-SHORT-MAX", FFI_CONSTANT, NULL, -1, ecl_make_fixnum(SHRT_MAX)},
+{FFI_ "C-SHORT-MIN", FFI_CONSTANT, NULL, -1, ecl_make_fixnum(SHRT_MIN)},
+{FFI_ "C-LONG-MAX", FFI_CONSTANT, NULL, -1, OBJNULL}, /* See main.d */
+{FFI_ "C-LONG-MIN", FFI_CONSTANT, NULL, -1, OBJNULL}, /* See main.d */
+{FFI_ "C-LONG-LONG-MAX",FFI_CONSTANT,NULL,-1,OBJNULL}, /* See main.d */
+{FFI_ "C-UCHAR-MAX", FFI_CONSTANT, NULL, -1, ecl_make_fixnum(UCHAR_MAX)},
+{FFI_ "C-UINT-MAX", FFI_CONSTANT, NULL, -1, OBJNULL}, /* See main.d */
+{FFI_ "C-USHORT-MAX", FFI_CONSTANT, NULL, -1, ecl_make_fixnum(USHRT_MAX)},
+{FFI_ "C-ULONG-MAX", FFI_CONSTANT, NULL, -1, OBJNULL}, /* See main.d */
+{FFI_ "C-ULONG-LONG-MAX",FFI_CONSTANT,NULL,-1,OBJNULL}, /* See main.d */
+#ifdef ecl_long_long_t
+{FFI_ "C-LONG-LONG-BIT", FFI_CONSTANT, NULL, -1, ecl_make_fixnum(ECL_LONG_LONG_BITS)},
+#else
+{FFI_ "C-LONG-LONG-BIT", FFI_CONSTANT, NULL, -1, OBJNULL},
+#endif
+
+{FFI_ "*USE-DFFI*", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "+NULL-CSTRING-POINTER+", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "ALLOCATE-FOREIGN-OBJECT", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "ALLOCATE-FOREIGN-STRING", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "C-INLINE", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "CALLBACK", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "CHAR*", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "CHAR-ARRAY-TO-POINTER", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "CLINES", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "CONVERT-FROM-CSTRING", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "CONVERT-FROM-FOREIGN-STRING", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "CONVERT-TO-CSTRING", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "CONVERT-TO-FOREIGN-STRING", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DEF-ARRAY", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DEF-ARRAY-POINTER", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DEF-CONSTANT", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DEF-ENUM", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DEF-FOREIGN-TYPE", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DEF-FOREIGN-VAR", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DEF-FUNCTION", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DEF-STRUCT", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DEF-TYPE", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DEF-UNION", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DEFCALLBACK", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DEFCBODY", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DEFENTRY", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DEFINLINE", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DEFLA", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DEREF-ARRAY", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DEREF-POINTER", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "DOUBLE", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "ENSURE-CHAR-CHARACTER", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "ENSURE-CHAR-INTEGER", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "ENSURE-CHAR-STORABLE", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "FIND-FOREIGN-LIBRARY", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "FOREIGN-STRING-LENGTH", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "FREE-CSTRING", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "FREE-FOREIGN-OBJECT", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "GET-SLOT-POINTER", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "GET-SLOT-VALUE", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "INT", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "LOAD-FOREIGN-LIBRARY", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "MAKE-NULL-POINTER", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "MAKE-POINTER", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "NULL-CHAR-P", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "OBJECT", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "POINTER-ADDRESS", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "SIZE-OF-FOREIGN-TYPE", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "VOID", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "WITH-CAST-POINTER", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "WITH-CSTRING", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "WITH-CSTRINGS", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "WITH-FOREIGN-OBJECT", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "WITH-FOREIGN-OBJECTS", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "WITH-FOREIGN-STRING", FFI_ORDINARY, NULL, -1, OBJNULL},
+{FFI_ "WITH-FOREIGN-STRINGS", FFI_ORDINARY, NULL, -1, OBJNULL},
 
 /* Tag for end of list */
 {NULL, CL_ORDINARY, NULL, -1, OBJNULL}};
