@@ -11,35 +11,10 @@
 
 ;;;; FFI	Symbols used in the foreign function interface
 
-(defpackage "FFI"
-  (:nicknames "UFFI")
-  (:export "CLINES" "DEFENTRY" "DEFLA" "DEFCBODY" "DEFINLINE" "C-INLINE"
-	   "DEFCALLBACK" "CALLBACK"
-
-	   "VOID" "OBJECT" "CHAR*" "INT" "DOUBLE"
-
-	   "DEF-CONSTANT" "DEF-FOREIGN-TYPE" "DEF-ENUM" "DEF-STRUCT"
-	   "DEF-ARRAY-POINTER" "DEF-FUNCTION" "DEF-UNION" "DEF-ARRAY"
-	   "ALLOCATE-FOREIGN-OBJECT" "FREE-FOREIGN-OBJECT" "MAKE-NULL-POINTER"
-	   "GET-SLOT-VALUE" "GET-SLOT-POINTER" "DEREF-ARRAY" "DEREF-POINTER"
-	   "POINTER-ADDRESS" "SIZE-OF-FOREIGN-TYPE" "DEF-FOREIGN-VAR"
-	   "NULL-CHAR-P" "ENSURE-CHAR-CHARACTER" "ENSURE-CHAR-INTEGER"
-	   "NULL-POINTER-P" "+NULL-CSTRING-POINTER+" "WITH-FOREIGN-OBJECTS"
-	   "MAKE-POINTER" "CHAR-ARRAY-TO-POINTER" "CONVERT-TO-FOREIGN-STRING"
-	   "CONVERT-FROM-FOREIGN-STRING" "ALLOCATE-FOREIGN-STRING" 
-           "WITH-FOREIGN-STRING" "WITH-FOREIGN-STRINGS"
-           "FOREIGN-STRING-LENGTH" "WITH-FOREIGN-OBJECT"
-	   "FIND-FOREIGN-LIBRARY" "LOAD-FOREIGN-LIBRARY"
-	   "ENSURE-CHAR-STORABLE" "DEF-TYPE"
-	   "WITH-CSTRING" "CONVERT-TO-CSTRING" "CONVERT-FROM-CSTRING" "FREE-CSTRING"
-           "WITH-CAST-POINTER" "WITH-CSTRINGS"
-
-	   "*USE-DFFI*"
-	   )
-  (:import-from "SYS" "NULL-POINTER-P" "GET-SYSPROP" "PUT-SYSPROP"
-                "FOREIGN-ELT-TYPE-P"))
-
 (in-package "FFI")
+
+(import 'si:null-pointer-p)
+(export 'si:null-pointer-p)
 
 #-ecl-min
 (clines "#include <string.h>")
